--- a/src/App.css
+++ b/src/App.css
@@ -58,16 +58,17 @@ video {
   width: 24em;
   margin: 0 auto;
   border-right: 2px solid rgba(255,255,255,.75);
+  font-family: -apple-system, Roboto, serif;
+  font-weight: 500;
   text-align: center;
   white-space: nowrap;
   overflow: hidden;
-  /* transform: translateY(-50%); */
 }
 
 /* Animation */
 .anim-typewriter{
-  animation: typewriter 3s steps(44) 1s 1 normal both,
-  blinkTextCursor 1000ms steps(44) infinite normal;
+  animation: typewriter 2s steps(10) 1s 1 normal both,
+  blinkTextCursor 1000ms steps(40) infinite normal;
 }
 
 @keyframes typewriter{
