--- a/src/App.css
+++ b/src/App.css
@@ -82,6 +82,10 @@ video {
   opacity: 0.8;
 }
 
+.css-m9glnp-MuiPaper-root-MuiDialog-paper{
+  background-color: rgb(255, 249, 235) !important;
+}
+
 .enter-button {
   animation: pulse 2.0s infinite;
 }
