--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,7 @@
   */
 }
 
-video {
+.splashVid {
   position: absolute;
   right: 0;
   bottom: 0;
@@ -54,6 +54,31 @@ video {
   background-size: cover;
   opacity: 0.60;
   overflow: hidden;
+}
+
+.splashPage:before{
+  content: '';
+  position: absolute;
+  background: rgba(203, 137, 62, 0.5);
+  border-radius: 5px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+
+.projectImg {
+  width: 100%;
+  height: 100%;
+  /*
+  background-size: cover;
+  */
+  opacity: 0.90;
+  overflow: hidden;
+  position: absolute;
+  left: 0;
+  z-index: 0;
 }
 
 .avatar {
