--- a/src/App.css
+++ b/src/App.css
@@ -67,6 +67,11 @@
   left: 0;
 }
 
+.projectHeaderWrap{
+  /*
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(88, 80, 57, 0.73));
+  */
+}
 
 .projectImg {
   width: 100%;
