--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,10 @@
   opacity: 0.8;
 }
 
+.menuButton:hover {
+  filter: grayscale(50%);
+}
+
 .css-m9glnp-MuiPaper-root-MuiDialog-paper{
   background-color: rgb(255, 249, 235) !important;
 }
